Fixed scrollbar + changed flowpane in library view to tilepane

--- a/src/styles/libraryview.css
+++ b/src/styles/libraryview.css
@@ -6,7 +6,7 @@
     -fx-background-color: #333;
 }
 
-.library-flow-pane {
+.library-tile-pane {
     -fx-background-color: transparent;
     -fx-padding: 20;
     -fx-pref-height: 150;
